# humanize-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
docs/: anti-ai-patterns.md  audience-persona.md  detection-aware-methods.md  fact-check.md  personality-and-soul.md  reference-analysis.md  source-ingestion.md  specificity-and-thought.md  voice-profile-deep.md
examples/essay-rewrite/: codex-run.md  draft.md  evidence.md  final.md  notes.md  sample.txt
examples/health-product-email/: codex-run.md  draft.md  evidence.md  final.md  notes.md  sample.txt
examples/product-email/: audit.json  codex-run.md  draft.md  evidence.md  factcheck.json  final.md  mechanical-rewrite.md  notes.md  profile.json  review.json  sample.txt
examples/promotional-blurb/: codex-run.md  draft.md  evidence.md  final.md  notes.md  sample.txt
examples/research-blog/: audit.json  codex-run.md  draft.md  evidence.md  factcheck.json  final.md  notes.md  profile.json  review.json  sample.txt
examples/social-post/: audit.json  codex-run.md  evidence.md  factcheck.json  final.md  mechanical-rewrite.md  notes.md  profile.json  review.json  sample.txt
examples/support-reply/: audit.json  codex-run.md  draft.md  evidence.md  factcheck.json  final.md  mechanical-rewrite.md  notes.md  profile.json  review.json  sample.txt
examples/technical-readme/: audit.json  codex-run.md  draft.md  evidence.md  factcheck.json  final.md  mechanical-rewrite.md  notes.md  profile.stdout.json  review.json  sample.txt
scripts/: __init__.py  humanize_skill.py
tests/: test_humanize_skill.py
